# android-sdl

./: .gitignore  README.md
app/: build.gradle
app/src/main/jni/: CMakeLists.txt
app/src/main/jni/SDL2/: CMakeLists.txt
app/src/main/jni/src/: CMakeLists.txt
